Added story 2.6 update social links
